--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="overlay"><h4>Branding</h4></div>
             </div>
             <div class="portfolio-card" data-aos="zoom-in" data-aos-delay="400">
-                <img src="https://images.unsplash.com/photo-1522542550221-31fd19255a7a?auto=format&fit=crop&w=800&q=80" alt="Work">
+                <img src="https://picsum.photos/id/3/800/600" alt="Work">
                 <div class="overlay"><h4>UI Concept</h4></div>
             </div>
         </div>
