--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+        <span class="typing-text"></span>
         <h1 data-aos="fade-up">মেকিং আইডিয়াজ ইনটু <br> <span style="color: var(--secondary-color);">রিয়েলিটি।</span></h1>
         <p data-aos="fade-up" data-aos-delay="200">আমি একজন মডার্ন ফুল-স্ট্যাক ডেভেলপার যারা আপনার ব্যবসার জন্য ডিজিটাল সলিউশন তৈরি করে।</p>
         <div class="btn-group" data-aos="zoom-in" data-aos-delay="400">
