--- a/index.html
+++ b/index.html
@@ -260,6 +260,17 @@
         </div>
     </section>
 
+    <div class="skill-box">
+    <span>HTML</span>
+    <div class="bar"><div class="progress" style="width: 90%;"></div></div>
+    <span>CSS</span>
+    <div class="bar"><div class="progress" style="width: 80%;"></div></div>
+    <span>TAILWIND</span>
+    <div class="bar"><div class="progress" style="width: 90%;"></div></div>
+    <span>BOOTSTRAP</span>
+    <div class="bar"><div class="progress" style="width: 90%;"></div></div>
+</div>
+
     <!-- Contact -->
     <section id="contact">
         <h2 class="section-title">যোগাযোগ করুন</h2>
@@ -319,13 +330,6 @@ document.addEventListener('mousemove', (e) => {
     cursor.style.top = e.pageY + 'px';
 });
 
-// 1. Typing Effect
-    new Typed(".typing-text", {
-        strings: ["Web Developer", "Designer", "Programmer"],
-        typeSpeed: 100,
-        backSpeed: 60,
-        loop: true
-    });
 
     // 2. Simple Scroll Progress Indicator
     window.onscroll = function() {
