--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
     <!-- External CSS Link -->
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@2.0.4/dist/lottie-player.js"></script>
 </head>
 <body>
 
@@ -49,7 +51,14 @@
             </div>
             <div class="hero-animation" data-aos="zoom-in">
                 <!-- Hero Animation -->
-                <lottie-player src="https://lottie.host/80916a04-585a-4e20-994c-28078a9c8b74/SclGz57t9T.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                <lottie-player 
+    src="https://lottie.host/80916a04-585a-4e20-994c-28078a9c8b74/SclGz57t9T.json" 
+    background="transparent" 
+    speed="1" 
+    style="width: 100%; height: 400px;" 
+    loop 
+    autoplay>
+</lottie-player>
             </div>
         </div>
     </section>
@@ -60,7 +69,14 @@
         <div class="grid">
             <div class="glass-card" data-aos="fade-up">
                 <div class="lottie-icon">
-                    <lottie-player src="https://lottie.host/68205167-27a3-4b47-920d-7368d37449c4/y0n8f8tW6V.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                    <lottie-player 
+    src="https://assets2.lottiefiles.com/packages/lf20_m6cuL6.json" 
+    background="transparent" 
+    speed="1" 
+    style="width: 100px; height: 100px;" 
+    loop 
+    autoplay>
+</lottie-player>
                 </div>
                 <h3>Web Development</h3>
                 <p>ক্লিন কোড এবং লেটেস্ট টেকনোলজি ব্যবহার করে ওয়েবসাইট তৈরি।</p>
