--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultimate Animated Portfolio</title>
+    <title>Professional Portfolio | Fixed Animations</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- AOS CSS (Scroll Animation) -->
+    <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <style>
@@ -23,51 +23,33 @@
             --text-light: #f8fafc;
         }
 
-        * {
-            margin: 0; padding: 0;
-            box-sizing: border-box;
-            scroll-behavior: smooth;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
 
         body {
             font-family: 'Poppins', 'Hind Siliguri', sans-serif;
             background-color: var(--bg-dark);
             color: var(--text-light);
             overflow-x: hidden;
-            cursor: none; /* Custom cursor */
+            cursor: none;
         }
 
-        /* Background Animated Effects */
-        .circle {
-            position: fixed; width: 300px; height: 300px;
-            filter: blur(100px); z-index: -1; border-radius: 50%; opacity: 0.3;
-        }
+        /* Background Effects */
+        .circle { position: fixed; width: 300px; height: 300px; filter: blur(100px); z-index: -1; border-radius: 50%; opacity: 0.3; }
         .circle-1 { background: var(--primary-color); top: -50px; left: -50px; }
         .circle-2 { background: var(--secondary-color); bottom: -50px; right: -50px; }
 
         /* Custom Cursor */
-        .cursor {
-            width: 20px; height: 20px; border: 2px solid var(--primary-color);
-            border-radius: 50%; position: fixed; pointer-events: none;
-            z-index: 9999; transition: transform 0.1s ease;
-            background: rgba(99, 102, 241, 0.2);
-        }
+        .cursor { width: 20px; height: 20px; border: 2px solid var(--primary-color); border-radius: 50%; position: fixed; pointer-events: none; z-index: 9999; transition: transform 0.1s ease; background: rgba(99, 102, 241, 0.2); }
 
         /* Navigation */
-        nav {
-            display: flex; justify-content: space-between; align-items: center;
-            padding: 20px 8%; position: fixed; width: 100%; top: 0; z-index: 1000;
-            backdrop-filter: blur(15px); border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            transition: 0.4s;
-        }
-
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 20px 8%; position: fixed; width: 100%; top: 0; z-index: 1000; backdrop-filter: blur(15px); border-bottom: 1px solid rgba(255, 255, 255, 0.1); transition: 0.4s; }
         .logo { font-size: 1.8rem; font-weight: 700; color: var(--primary-color); }
         .nav-links { display: flex; list-style: none; }
         .nav-links li { margin-left: 30px; }
-        .nav-links a { text-decoration: none; color: white; transition: 0.3s; font-size: 1rem; }
+        .nav-links a { text-decoration: none; color: white; transition: 0.3s; }
         .nav-links a:hover { color: var(--primary-color); }
 
-        /* Hero Section */
+        /* Hero */
         section { padding: 100px 8%; }
         .hero { min-height: 100vh; display: flex; align-items: center; }
         .container { display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; gap: 40px; }
@@ -77,73 +59,49 @@
         .hero-animation { flex: 1; min-width: 320px; display: flex; justify-content: center; }
 
         /* Buttons */
-        .btn { padding: 12px 35px; border-radius: 50px; text-decoration: none; font-weight: 600; transition: 0.3s; display: inline-block; cursor: pointer; }
+        .btn { padding: 12px 35px; border-radius: 50px; text-decoration: none; font-weight: 600; transition: 0.3s; display: inline-block; }
         .btn-primary { background: var(--primary-color); color: white; border: none; }
-        .btn-primary:hover { transform: scale(1.05); box-shadow: 0 10px 20px rgba(99, 102, 241, 0.3); }
         .btn-outline { border: 2px solid var(--primary-color); color: white; margin-left: 10px; }
 
-        /* Services Cards with Lottie Icons */
+        /* Services Grid */
         .section-title { text-align: center; font-size: 2.5rem; margin-bottom: 50px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; }
-        .glass-card {
-            background: var(--glass-bg); padding: 40px; border-radius: 25px;
-            border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;
-            transition: 0.4s; backdrop-filter: blur(10px);
-        }
+        .glass-card { background: var(--glass-bg); padding: 40px; border-radius: 25px; border: 1px solid rgba(255, 255, 255, 0.1); text-align: center; transition: 0.4s; backdrop-filter: blur(10px); }
         .glass-card:hover { transform: translateY(-15px); background: rgba(255, 255, 255, 0.1); }
         .lottie-icon { width: 120px; height: 120px; margin: 0 auto 20px; }
 
-        /* Skills Progress Bar */
+        /* Skills Progress */
         .skill-box { margin-bottom: 25px; }
         .skill-info { display: flex; justify-content: space-between; margin-bottom: 8px; font-weight: 600; }
         .bar { background: rgba(255, 255, 255, 0.1); height: 12px; border-radius: 10px; overflow: hidden; }
         .progress { background: linear-gradient(90deg, var(--primary-color), var(--secondary-color)); height: 100%; border-radius: 10px; }
 
-        /* Experience Timeline */
-        .timeline { position: relative; max-width: 800px; margin: 0 auto; border-left: 2px solid var(--primary-color); padding-left: 30px; }
-        .timeline-item { margin-bottom: 40px; position: relative; }
-        .timeline-item::before { content: ''; position: absolute; width: 16px; height: 16px; background: var(--secondary-color); border-radius: 50%; left: -39px; top: 5px; }
-        .timeline-content { background: var(--glass-bg); padding: 25px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.1); }
-
-        /* Contact Section */
+        /* Contact */
         .contact-form { flex: 1; background: var(--glass-bg); padding: 40px; border-radius: 25px; border: 1px solid rgba(255,255,255,0.1); max-width: 500px; }
-        .contact-form input, .contact-form textarea {
-            width: 100%; padding: 15px; margin-bottom: 15px;
-            background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 12px; color: white; outline: none;
-        }
+        .contact-form input, .contact-form textarea { width: 100%; padding: 15px; margin-bottom: 15px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 12px; color: white; outline: none; }
 
         footer { text-align: center; padding: 40px; border-top: 1px solid rgba(255, 255, 255, 0.1); }
 
-        /* Responsive */
         @media (max-width: 768px) {
             .nav-links { display: none; }
             .hero-text h1 { font-size: 2.5rem; text-align: center; }
-            .hero-text p { text-align: center; }
-            .btn-group { display: flex; justify-content: center; }
             .cursor { display: none; }
-            body { cursor: default; }
-            section { padding: 60px 5%; }
+            body { cursor: auto; }
         }
     </style>
 </head>
 <body>
 
-    <!-- Custom Cursor -->
     <div class="cursor"></div>
-
-    <!-- Background Circles -->
     <div class="circle circle-1"></div>
     <div class="circle circle-2"></div>
 
-    <!-- Navigation -->
     <nav id="navbar">
         <div class="logo">PORTFOLIO.</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -153,43 +111,43 @@
         <div class="container">
             <div class="hero-text" data-aos="fade-right">
                 <h1>হ্যালো, আমি একজন <br><span class="typing-text"></span></h1>
-                <p>আমি মডার্ন ওয়েব টেকনোলজি এবং লটে অ্যানিমেশন ব্যবহার করে প্রিমিয়াম ওয়েবসাইট তৈরি করি। আপনার আইডিয়াকে ডিজিটাল রূপ দিতে আমি প্রস্তুত।</p>
+                <p>আমি মডার্ন ওয়েব টেকনোলজি ব্যবহার করে আপনার ব্যবসার জন্য আধুনিক ওয়েবসাইট তৈরি করি। নিচে আমার কাজগুলো দেখুন।</p>
                 <div class="btn-group">
-                    <a href="#contact" class="btn btn-primary">হায়ার মি</a>
-                    <a href="#services" class="btn btn-outline">সার্ভিস দেখুন</a>
+                    <a href="#contact" class="btn btn-primary">যোগাযোগ করুন</a>
+                    <a href="#services" class="btn btn-outline">সার্ভিসসমূহ</a>
                 </div>
             </div>
             <div class="hero-animation" data-aos="zoom-in">
-                <!-- Main Hero Lottie -->
-                <lottie-player src="https://lottie.host/80916a04-585a-4e20-994c-28078a9c8b74/SclGz57t9T.json" background="transparent" speed="1" style="width: 100%; height: 450px;" loop autoplay></lottie-player>
+                <!-- Verified Stable Link -->
+                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_iv4dsx3q.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
         </div>
     </section>
 
     <!-- Services Section -->
     <section id="services">
-        <h2 class="section-title" data-aos="fade-up">আমার সার্ভিসসমূহ</h2>
+        <h2 class="section-title" data-aos="fade-up">সার্ভিসসমূহ</h2>
         <div class="grid">
             <div class="glass-card" data-aos="fade-up">
                 <div class="lottie-icon">
-                    <lottie-player src="https://lottie.host/68205167-27a3-4b47-920d-7368d37449c4/y0n8f8tW6V.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_m6cuL6.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
                 <h3>Web Design</h3>
-                <p>আধুনিক এবং রেসপনসিভ ওয়েব ডিজাইন যা সব ডিভাইসে কাজ করবে।</p>
+                <p>আকর্ষণীয় এবং ফাস্ট লোডিং ওয়েবসাইট ডিজাইন।</p>
             </div>
             <div class="glass-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="lottie-icon">
-                    <lottie-player src="https://lottie.host/49340026-673e-4d40-8430-80415a999201/zM1nKz0pXo.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_ygiuomst.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
-                <h3>App Development</h3>
-                <p>ইউজার ফ্রেন্ডলি মোবাইল অ্যাপ্লিকেশন সল্যুশন।</p>
+                <h3>Mobile Apps</h3>
+                <p>আধুনিক এবং ইউজার ফ্রেন্ডলি অ্যাপ সল্যুশন।</p>
             </div>
             <div class="glass-card" data-aos="fade-up" data-aos-delay="400">
                 <div class="lottie-icon">
-                    <lottie-player src="https://lottie.host/0a93f773-772c-490b-9273-5f04825988e0/9Pq1lO8G0y.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_q5pk6p1k.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
-                <h3>SEO & Marketing</h3>
-                <p>আপনার সাইটকে গুগলের প্রথম পাতায় নিয়ে আসার নিশ্চয়তা।</p>
+                <h3>SEO Marketing</h3>
+                <p>আপনার ব্র্যান্ডকে গুগলের সবার উপরে নিয়ে আসা।</p>
             </div>
         </div>
     </section>
@@ -198,7 +156,7 @@
     <section id="skills">
         <div class="container">
             <div class="hero-animation" data-aos="fade-right">
-                <lottie-player src="https://lottie.host/8b475960-955a-42d4-a95e-38c36209b552/GjB8UuS7eU.json" background="transparent" speed="1" style="width: 100%; height: 350px;" loop autoplay></lottie-player>
+                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_w51pcehl.json" background="transparent" speed="1" style="width: 100%; height: 350px;" loop autoplay></lottie-player>
             </div>
             <div class="hero-text" data-aos="fade-left">
                 <h2 class="section-title" style="text-align: left;">টেকনিক্যাল স্কিলস</h2>
@@ -211,29 +169,8 @@
                     <div class="bar"><div class="progress" style="width: 85%;"></div></div>
                 </div>
                 <div class="skill-box">
-                    <div class="skill-info"><span>Graphic Design</span><span>75%</span></div>
-                    <div class="bar"><div class="progress" style="width: 75%;"></div></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience">
-        <h2 class="section-title" data-aos="fade-up">অভিজ্ঞতা ও শিক্ষা</h2>
-        <div class="timeline">
-            <div class="timeline-item" data-aos="fade-right">
-                <div class="timeline-content">
-                    <h3>সিনিয়র ওয়েব ডেভেলপার</h3>
-                    <span>২০২২ - বর্তমান | টেক আইটি</span>
-                    <p>ফুল-স্ট্যাক প্রজেক্ট ম্যানেজমেন্ট এবং ক্লায়েন্ট ডিলিং।</p>
-                </div>
-            </div>
-            <div class="timeline-item" data-aos="fade-right">
-                <div class="timeline-content">
-                    <h3>UI/UX ডিজাইনার</h3>
-                    <span>২০২০ - ২০২১ | ক্রিয়েটিভ এজেন্সি</span>
-                    <p>আধুনিক অ্যাপ এবং ওয়েব ইন্টারফেস ডিজাইন।</p>
+                    <div class="skill-info"><span>Web Animation</span><span>90%</span></div>
+                    <div class="bar"><div class="progress" style="width: 90%;"></div></div>
                 </div>
             </div>
         </div>
@@ -244,13 +181,13 @@
         <h2 class="section-title" data-aos="fade-up">যোগাযোগ করুন</h2>
         <div class="container">
             <div class="hero-animation" data-aos="zoom-in">
-                <lottie-player src="https://lottie.host/62678663-8888-4c9f-8646-17551600913e/3V0jF8vFvE.json" background="transparent" speed="1" style="width: 100%; height: 350px;" loop autoplay></lottie-player>
+                <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_u25cckyh.json" background="transparent" speed="1" style="width: 100%; height: 350px;" loop autoplay></lottie-player>
             </div>
             <div class="contact-form" data-aos="fade-up">
                 <input type="text" placeholder="আপনার নাম">
                 <input type="email" placeholder="আপনার ইমেইল">
                 <textarea rows="5" placeholder="আপনার মেসেজ"></textarea>
-                <button class="btn btn-primary" style="width: 100%;">সেন্ড মেসেজ</button>
+                <button class="btn btn-primary" style="width: 100%; border:none; cursor:pointer;">মেসেজ পাঠান</button>
             </div>
         </div>
     </section>
@@ -259,34 +196,27 @@
         <p>&copy; ২০২৪ | প্রফেশনাল পোর্টফোলিও ডিজাইন</p>
     </footer>
 
-    <!-- LIBRARIES (JS) -->
-    <!-- 1. AOS Animation -->
+    <!-- JS Libraries -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- 2. Typed.js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <!-- 3. Lottie Player (THE FIX) -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script>
-        // Initialize AOS
         AOS.init({ duration: 1000, once: true });
 
-        // Initialize Typing Effect
         var typed = new Typed(".typing-text", {
-            strings: ["Web Developer", "UI/UX Designer", "Lottie Expert", "Freelancer"],
+            strings: ["Web Developer", "UI/UX Designer", "Software Engineer", "Freelancer"],
             typeSpeed: 100,
             backSpeed: 60,
             loop: true
         });
 
-        // Custom Cursor Movement
         const cursor = document.querySelector('.cursor');
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
 
-        // Navbar Scroll Effect
         window.addEventListener('scroll', () => {
             const nav = document.getElementById('navbar');
             if (window.scrollY > 50) {
