--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Portfolio | Fixed Animations</title>
+    <title>Premium Animated Portfolio | Final Fixed</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -49,10 +49,14 @@
         .nav-links a { text-decoration: none; color: white; transition: 0.3s; }
         .nav-links a:hover { color: var(--primary-color); }
 
-        /* Hero */
+        /* Sections General */
         section { padding: 100px 8%; }
-        .hero { min-height: 100vh; display: flex; align-items: center; }
         .container { display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; gap: 40px; }
+        .section-title { text-align: center; font-size: 2.5rem; margin-bottom: 50px; position: relative; }
+        .section-title::after { content: ''; position: absolute; bottom: -10px; left: 50%; transform: translateX(-50%); width: 60px; height: 3px; background: var(--primary-color); }
+
+        /* Hero Text */
+        .hero { min-height: 100vh; display: flex; align-items: center; }
         .hero-text { flex: 1; min-width: 320px; }
         .hero-text h1 { font-size: 3.5rem; line-height: 1.2; margin-bottom: 20px; }
         .typing-text { color: var(--secondary-color); font-weight: 700; }
@@ -63,20 +67,23 @@
         .btn-primary { background: var(--primary-color); color: white; border: none; }
         .btn-outline { border: 2px solid var(--primary-color); color: white; margin-left: 10px; }
 
-        /* Services Grid */
-        .section-title { text-align: center; font-size: 2.5rem; margin-bottom: 50px; }
+        /* Service Cards */
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; }
-        .glass-card { background: var(--glass-bg); padding: 40px; border-radius: 25px; border: 1px solid rgba(255, 255, 255, 0.1); text-align: center; transition: 0.4s; backdrop-filter: blur(10px); }
-        .glass-card:hover { transform: translateY(-15px); background: rgba(255, 255, 255, 0.1); }
-        .lottie-icon { width: 120px; height: 120px; margin: 0 auto 20px; }
+        .glass-card { 
+            background: var(--glass-bg); padding: 40px; border-radius: 25px; 
+            border: 1px solid rgba(255, 255, 255, 0.1); text-align: center; 
+            transition: 0.4s; backdrop-filter: blur(10px); 
+        }
+        .glass-card:hover { transform: translateY(-15px); background: rgba(255, 255, 255, 0.1); border-color: var(--primary-color); }
+        .lottie-box { width: 150px; height: 150px; margin: 0 auto 15px; }
 
-        /* Skills Progress */
+        /* Skills */
         .skill-box { margin-bottom: 25px; }
         .skill-info { display: flex; justify-content: space-between; margin-bottom: 8px; font-weight: 600; }
         .bar { background: rgba(255, 255, 255, 0.1); height: 12px; border-radius: 10px; overflow: hidden; }
         .progress { background: linear-gradient(90deg, var(--primary-color), var(--secondary-color)); height: 100%; border-radius: 10px; }
 
-        /* Contact */
+        /* Contact Form */
         .contact-form { flex: 1; background: var(--glass-bg); padding: 40px; border-radius: 25px; border: 1px solid rgba(255,255,255,0.1); max-width: 500px; }
         .contact-form input, .contact-form textarea { width: 100%; padding: 15px; margin-bottom: 15px; background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 12px; color: white; outline: none; }
 
@@ -111,14 +118,14 @@
         <div class="container">
             <div class="hero-text" data-aos="fade-right">
                 <h1>হ্যালো, আমি একজন <br><span class="typing-text"></span></h1>
-                <p>আমি মডার্ন ওয়েব টেকনোলজি ব্যবহার করে আপনার ব্যবসার জন্য আধুনিক ওয়েবসাইট তৈরি করি। নিচে আমার কাজগুলো দেখুন।</p>
+                <p>আমি আধুনিক ওয়েব টেকনোলজি এবং এনিমেশন ব্যবহার করে আপনার ব্যবসার জন্য প্রিমিয়াম ওয়েবসাইট তৈরি করি।</p>
                 <div class="btn-group">
                     <a href="#contact" class="btn btn-primary">যোগাযোগ করুন</a>
-                    <a href="#services" class="btn btn-outline">সার্ভিসসমূহ</a>
+                    <a href="#services" class="btn btn-outline">কাজ দেখুন</a>
                 </div>
             </div>
             <div class="hero-animation" data-aos="zoom-in">
-                <!-- Verified Stable Link -->
+                <!-- Stable Animation 1 -->
                 <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_iv4dsx3q.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
         </div>
@@ -128,26 +135,29 @@
     <section id="services">
         <h2 class="section-title" data-aos="fade-up">সার্ভিসসমূহ</h2>
         <div class="grid">
+            <!-- Service 1 -->
             <div class="glass-card" data-aos="fade-up">
-                <div class="lottie-icon">
-                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_m6cuL6.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                <div class="lottie-box">
+                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_8u9v6zqc.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
                 <h3>Web Design</h3>
-                <p>আকর্ষণীয় এবং ফাস্ট লোডিং ওয়েবসাইট ডিজাইন।</p>
+                <p>আধুনিক এবং ফাস্ট লোডিং ওয়েবসাইট ডিজাইন যা আপনার ব্র্যান্ডকে তুলে ধরবে।</p>
             </div>
+            <!-- Service 2 -->
             <div class="glass-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="lottie-icon">
-                    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_ygiuomst.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                <div class="lottie-box">
+                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_vnikbeve.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
-                <h3>Mobile Apps</h3>
-                <p>আধুনিক এবং ইউজার ফ্রেন্ডলি অ্যাপ সল্যুশন।</p>
+                <h3>App Development</h3>
+                <p>সহজ এবং ইউজার-ফ্রেন্ডলি মোবাইল অ্যাপ্লিকেশন সল্যুশন আপনার ব্যবসার জন্য।</p>
             </div>
+            <!-- Service 3 -->
             <div class="glass-card" data-aos="fade-up" data-aos-delay="400">
-                <div class="lottie-icon">
-                    <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_q5pk6p1k.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                <div class="lottie-box">
+                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_q5pk6p1k.json" background="transparent" speed="1" loop autoplay></lottie-player>
                 </div>
-                <h3>SEO Marketing</h3>
-                <p>আপনার ব্র্যান্ডকে গুগলের সবার উপরে নিয়ে আসা।</p>
+                <h3>Digital Marketing</h3>
+                <p>আপনার সাইটকে এসইও এবং মার্কেটিং এর মাধ্যমে গুগলের সবার উপরে নিয়ে আসা।</p>
             </div>
         </div>
     </section>
@@ -169,8 +179,8 @@
                     <div class="bar"><div class="progress" style="width: 85%;"></div></div>
                 </div>
                 <div class="skill-box">
-                    <div class="skill-info"><span>Web Animation</span><span>90%</span></div>
-                    <div class="bar"><div class="progress" style="width: 90%;"></div></div>
+                    <div class="skill-info"><span>Graphic Design</span><span>75%</span></div>
+                    <div class="bar"><div class="progress" style="width: 75%;"></div></div>
                 </div>
             </div>
         </div>
@@ -196,27 +206,32 @@
         <p>&copy; ২০২৪ | প্রফেশনাল পোর্টফোলিও ডিজাইন</p>
     </footer>
 
-    <!-- JS Libraries -->
+    <!-- JS Scripts (Correct Order) -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <!-- Important: Load Lottie Player First -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script>
+        // AOS Initialize
         AOS.init({ duration: 1000, once: true });
 
+        // Typed JS Initialize
         var typed = new Typed(".typing-text", {
-            strings: ["Web Developer", "UI/UX Designer", "Software Engineer", "Freelancer"],
+            strings: ["Web Developer", "UI/UX Designer", "Freelancer", "Software Engineer"],
             typeSpeed: 100,
             backSpeed: 60,
             loop: true
         });
 
+        // Custom Cursor Movement
         const cursor = document.querySelector('.cursor');
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
 
+        // Navbar Scroll Effect
         window.addEventListener('scroll', () => {
             const nav = document.getElementById('navbar');
             if (window.scrollY > 50) {
