--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Animated Portfolio | Final Fixed</title>
+    <title>Premium Animated Portfolio | Updated</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -67,7 +67,7 @@
         .btn-primary { background: var(--primary-color); color: white; border: none; }
         .btn-outline { border: 2px solid var(--primary-color); color: white; margin-left: 10px; }
 
-        /* Service Cards */
+        /* Grid Layout */
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; }
         .glass-card { 
             background: var(--glass-bg); padding: 40px; border-radius: 25px; 
@@ -75,13 +75,21 @@
             transition: 0.4s; backdrop-filter: blur(10px); 
         }
         .glass-card:hover { transform: translateY(-15px); background: rgba(255, 255, 255, 0.1); border-color: var(--primary-color); }
-        .lottie-box { width: 150px; height: 150px; margin: 0 auto 15px; }
+        
+        /* Updated Service Images */
+        .service-img { width: 100%; height: 180px; object-fit: cover; border-radius: 15px; margin-bottom: 20px; }
 
         /* Skills */
         .skill-box { margin-bottom: 25px; }
         .skill-info { display: flex; justify-content: space-between; margin-bottom: 8px; font-weight: 600; }
         .bar { background: rgba(255, 255, 255, 0.1); height: 12px; border-radius: 10px; overflow: hidden; }
         .progress { background: linear-gradient(90deg, var(--primary-color), var(--secondary-color)); height: 100%; border-radius: 10px; }
+
+        /* Testimonials Card */
+        .testimonial-card { text-align: left; padding: 30px; }
+        .testimonial-card p { font-style: italic; margin-bottom: 15px; }
+        .user-info { display: flex; align-items: center; gap: 15px; }
+        .user-info img { width: 50px; height: 50px; border-radius: 50%; }
 
         /* Contact Form */
         .contact-form { flex: 1; background: var(--glass-bg); padding: 40px; border-radius: 25px; border: 1px solid rgba(255,255,255,0.1); max-width: 500px; }
@@ -107,8 +115,10 @@
         <div class="logo">PORTFOLIO.</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#testimonials">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -125,37 +135,48 @@
                 </div>
             </div>
             <div class="hero-animation" data-aos="zoom-in">
-                <!-- Stable Animation 1 -->
                 <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_iv4dsx3q.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- New About Me Section -->
+    <section id="about" style="background: rgba(255,255,255,0.02);">
+        <div class="container">
+            <div class="hero-animation" data-aos="fade-right">
+                <!-- About Lottie -->
+                <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_tp5dbe4g.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
+            </div>
+            <div class="hero-text" data-aos="fade-left">
+                <h2 class="section-title" style="text-align: left;">আমার সম্পর্কে</h2>
+                <p>আমি গত ৩ বছর ধরে ওয়েব ডেভেলপমেন্ট নিয়ে কাজ করছি। কোডিং করা এবং নতুন নতুন ইন্টারফেস ডিজাইন করা আমার শখ। আমি সবসময় চেষ্টা করি ক্লায়েন্টের চাহিদা অনুযায়ী সেরা আউটপুট দিতে।</p>
+                <br>
+                <p><i class="fas fa-check-circle" style="color: var(--primary-color);"></i> ১০০% রেসপনসিভ ডিজাইন</p>
+                <p><i class="fas fa-check-circle" style="color: var(--primary-color);"></i> ক্লিন এবং ফ্রেশ কোড</p>
+                <p><i class="fas fa-check-circle" style="color: var(--primary-color);"></i> সময়মতো প্রজেক্ট ডেলিভারি</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section (Images used here instead of Lottie) -->
     <section id="services">
         <h2 class="section-title" data-aos="fade-up">সার্ভিসসমূহ</h2>
         <div class="grid">
             <!-- Service 1 -->
             <div class="glass-card" data-aos="fade-up">
-                <div class="lottie-box">
-                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_8u9v6zqc.json" background="transparent" speed="1" loop autoplay></lottie-player>
-                </div>
+                <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Web Design" class="service-img">
                 <h3>Web Design</h3>
                 <p>আধুনিক এবং ফাস্ট লোডিং ওয়েবসাইট ডিজাইন যা আপনার ব্র্যান্ডকে তুলে ধরবে।</p>
             </div>
             <!-- Service 2 -->
             <div class="glass-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="lottie-box">
-                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_vnikbeve.json" background="transparent" speed="1" loop autoplay></lottie-player>
-                </div>
+                <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="App Dev" class="service-img">
                 <h3>App Development</h3>
                 <p>সহজ এবং ইউজার-ফ্রেন্ডলি মোবাইল অ্যাপ্লিকেশন সল্যুশন আপনার ব্যবসার জন্য।</p>
             </div>
             <!-- Service 3 -->
             <div class="glass-card" data-aos="fade-up" data-aos-delay="400">
-                <div class="lottie-box">
-                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_q5pk6p1k.json" background="transparent" speed="1" loop autoplay></lottie-player>
-                </div>
+                <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Marketing" class="service-img">
                 <h3>Digital Marketing</h3>
                 <p>আপনার সাইটকে এসইও এবং মার্কেটিং এর মাধ্যমে গুগলের সবার উপরে নিয়ে আসা।</p>
             </div>
@@ -186,6 +207,36 @@
         </div>
     </section>
 
+    <!-- New Testimonials Section with Lottie -->
+    <section id="testimonials">
+        <h2 class="section-title" data-aos="fade-up">ক্লায়েন্ট কি বলে</h2>
+        <div class="grid">
+            <div class="glass-card testimonial-card" data-aos="zoom-in">
+                <!-- Lottie Icon for Review -->
+                <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_m6cuL6.json" background="transparent" speed="1" style="width: 80px; height: 80px;" loop autoplay></lottie-player>
+                <p>"অসাধারণ কাজ! তিনি আমার ওয়েবসাইটের জন্য যা চেয়েছিলাম ঠিক তাই করে দিয়েছেন।"</p>
+                <div class="user-info">
+                    <img src="https://i.pravatar.cc/150?img=1" alt="User">
+                    <div>
+                        <h4>আব্দুর রহমান</h4>
+                        <small>CEO, TechBD</small>
+                    </div>
+                </div>
+            </div>
+            <div class="glass-card testimonial-card" data-aos="zoom-in" data-aos-delay="200">
+                <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_m6cuL6.json" background="transparent" speed="1" style="width: 80px; height: 80px;" loop autoplay></lottie-player>
+                <p>"খুবই প্রফেশনাল এবং কাজের প্রতি দায়িত্ববান। আমি তাকে রিকমেন্ড করছি।"</p>
+                <div class="user-info">
+                    <img src="https://i.pravatar.cc/150?img=2" alt="User">
+                    <div>
+                        <h4>সারা ইসলাম</h4>
+                        <small>Founder, StyleHub</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
         <h2 class="section-title" data-aos="fade-up">যোগাযোগ করুন</h2>
@@ -206,17 +257,14 @@
         <p>&copy; ২০২৪ | প্রফেশনাল পোর্টফোলিও ডিজাইন</p>
     </footer>
 
-    <!-- JS Scripts (Correct Order) -->
+    <!-- JS Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <!-- Important: Load Lottie Player First -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script>
-        // AOS Initialize
         AOS.init({ duration: 1000, once: true });
 
-        // Typed JS Initialize
         var typed = new Typed(".typing-text", {
             strings: ["Web Developer", "UI/UX Designer", "Freelancer", "Software Engineer"],
             typeSpeed: 100,
@@ -224,14 +272,12 @@
             loop: true
         });
 
-        // Custom Cursor Movement
         const cursor = document.querySelector('.cursor');
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
 
-        // Navbar Scroll Effect
         window.addEventListener('scroll', () => {
             const nav = document.getElementById('navbar');
             if (window.scrollY > 50) {
